--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "bevy_health_bar3d"
-version = "0.1.0"
+description = "Simple healthbar for bevy implemented as a billboard shader"
+version = "1.0.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
-exclude = ["./examples"]
+keywords = ["bevy", "gamedev", "healthbar", "billboard" ]
+categories = ["game-development", "rendering"]
+authors = ["Jan Wendland"]
+exclude = ["examples"]
 
 [dependencies]
 bevy = { version = "0.9", features = ["bevy_pbr", "bevy_render"] }
