--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 keywords = ["bevy", "gamedev", "healthbar", "billboard" ]
 categories = ["game-development", "rendering"]
+repository = "https://github.com/sparten11740/bevy_health_bar3d.git"
+homepage = "https://github.com/sparten11740/bevy_health_bar3d"
 authors = ["Jan Wendland"]
 exclude = ["examples"]
 
