--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@nightly
       - name: Install system libs
         run: sudo apt-get install libasound2-dev libudev-dev pkg-config
       - name: Run clippy
