--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@nightly
+        with:
+          components: clippy
       - name: Install system libs
         run: sudo apt-get install libasound2-dev libudev-dev pkg-config
       - name: Run clippy
