--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -30,8 +30,10 @@ jobs:
           restore-keys: ${{ runner.os }}-cargo-
       - uses: dtolnay/rust-toolchain@nightly
         with:
-          components: clippy
+          components: clippy, rustfmt
       - name: Install system libs
         run: sudo apt-get install libasound2-dev libudev-dev pkg-config
-      - name: Run clippy
+      - name: Lint
         run: cargo clippy -- -Dwarnings
+      - name: Check format
+        run: cargo fmt --all -- --check
