chore: add lockfile to assets commited by release process

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["CHANGELOG.md", "Cargo.toml"]
+        "assets": ["CHANGELOG.md", "Cargo.toml", "Cargo.lock"]
       }
     ],
     "@semantic-release/github"
