--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,10 @@ authors = ["Jan Wendland"]
 include = ["/src", "CHANGELOG.md", "/assets", "LICENSE-APACHE", "LICENSE-MIT"]
 
 [dependencies]
-bevy = { version = "0.12.0", features = ["bevy_pbr", "bevy_render"] }
+bevy = { version = "0.12.0", default-features = false, features = ["bevy_pbr", "bevy_render"] }
 ordered-float = "3.4.0"
 
 [dev-dependencies]
+bevy  = "0.12.0"
 bevy-inspector-egui = "0.21.0"
 bevy_tweening = "0.9.0"
