--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ ordered-float = "3.9.2"
 [dev-dependencies]
 bevy = "0.14.0"
 bevy-inspector-egui = "0.25.0"
-bevy_tweening = { git = "https://github.com/BraymatterOrg/bevy_tweening_0_14", branch = "0.14" }
+bevy_tweening = { git = "https://github.com/BraymatterOrg/bevy_tweening_0_14", rev = "1e46e67938ef21cfd3b80a9bd7f9e3de1edd425c" }
