--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "3.2.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
-keywords = ["bevy", "gamedev", "healthbar", "billboard" ]
+keywords = ["bevy", "gamedev", "healthbar", "billboard"]
 categories = ["game-development", "rendering"]
 repository = "https://github.com/sparten11740/bevy_health_bar3d.git"
 homepage = "https://github.com/sparten11740/bevy_health_bar3d"
@@ -13,10 +13,10 @@ authors = ["Jan Wendland"]
 include = ["/src", "CHANGELOG.md", "/assets", "LICENSE-APACHE", "LICENSE-MIT"]
 
 [dependencies]
-bevy = { version = "0.13.1", default-features = false, features = ["bevy_pbr", "bevy_render"] }
+bevy = { version = "0.14.0", default-features = false, features = ["bevy_pbr", "bevy_render"] }
 ordered-float = "3.9.2"
 
 [dev-dependencies]
-bevy  = "0.13.1"
-bevy-inspector-egui = "0.23.4"
-bevy_tweening = "0.10.0"
+bevy = "0.14.0"
+bevy-inspector-egui = "0.25.0"
+bevy_tweening = { git = "https://github.com/BraymatterOrg/bevy_tweening_0_14", rev = "1e46e67938ef21cfd3b80a9bd7f9e3de1edd425c" }
