--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ authors = ["Jan Wendland"]
 include = ["/src", "CHANGELOG.md", "/assets", "LICENSE-APACHE", "LICENSE-MIT"]
 
 [dependencies]
-bevy = { version = "0.14.0", default-features = false, features = ["bevy_pbr", "bevy_render"] }
+bevy = { version = "0.15.0", default-features = false, features = ["bevy_pbr", "bevy_render"] }
 ordered-float = "3.9.2"
 
 [dev-dependencies]
-bevy = "0.14.0"
-bevy-inspector-egui = "0.25.0"
-bevy_tweening = { git = "https://github.com/BraymatterOrg/bevy_tweening_0_14", rev = "1e46e67938ef21cfd3b80a9bd7f9e3de1edd425c" }
+bevy = "0.15.0"
+bevy-inspector-egui = "0.28.0"
+bevy_tweening = "0.12.0"
