update to release version bevy and bevy-inspector-egui

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,12 @@ authors = ["Jan Wendland"]
 include = ["/src", "CHANGELOG.md", "/assets", "LICENSE-APACHE", "LICENSE-MIT"]
 
 [dependencies]
-bevy = { version = "0.16.0-rc", default-features = false, features = ["std", "bevy_pbr", "bevy_render"] }
+bevy = { version = "0.16", default-features = false, features = ["bevy_pbr", "bevy_render"] }
 ordered-float = "3.9.2"
 
 [dev-dependencies]
-bevy = "0.16.0-rc"
-
-# TODO: replace with released versions
-#bevy-inspector-egui = "0.28.0"
-bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui", branch = "bevy_0.16" }
+bevy = "0.16"
+bevy-inspector-egui = "0.31"
 
 #bevy_tweening = "0.12.0"
 bevy_tweening = { git = "https://github.com/slyedoc/bevy_tweening", branch = "bevy_0.16" }
