--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -44,6 +44,8 @@ jobs:
         with:
           components: clippy, rustfmt
       - name: Install system libs
-        run: sudo apt-get install libasound2-dev libudev-dev pkg-config
+        run: |
+          sudo apt-get update
+          sudo apt-get install libasound2-dev libudev-dev pkg-config
       - name: ${{ matrix.name }}
         run: ${{ matrix.cmd }}
