--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -23,14 +23,17 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - name: Install system libs
         run: sudo apt-get install libasound2-dev libudev-dev pkg-config
-      - uses: cycjimmy/semantic-release-action@v3
+      - uses: cycjimmy/semantic-release-action@v4
         with:
+          semantic_version: 25.0.1
           extra_plugins: |
             @semantic-release/changelog@^6.0.3
             @semantic-release/git@^10.0.1
-            @semantic-release/github@^8.0.7
-            @semantic-release-cargo/semantic-release-cargo@^2.1.77
-            conventional-changelog-conventionalcommits@^5.0.0
+            @semantic-release/github@^12.0.0
+            @semantic-release/commit-analyzer@13.0.1
+            @semantic-release/release-notes-generator@14.1.0
+            @semantic-release-cargo/semantic-release-cargo@^2.4.77
+            conventional-changelog-conventionalcommits@^9.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GH_AUTOMATION_PAT }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
